Add sponsoring links

--- a/templates/index.html
+++ b/templates/index.html
@@ -50,11 +50,12 @@
         {% include "snippets/logo.html" %}
         <p class="bio">
           <span>
-            Backend engineer at trivago, open-source maintainer, speaker.
+            Backend engineer, open-source maintainer, speaker.
           </span>
           <a href="/about">About me.</a>
         </p>
-        {% include "snippets/nav.html" %} {% include "snippets/search.html" %}
+        {% include "snippets/nav.html" %}
+        {% include "snippets/search.html" %}
       </header>
 
       <main>
