--- a/templates/snippets/nav.html
+++ b/templates/snippets/nav.html
@@ -12,7 +12,7 @@
             </a>
         </li>
         <li>
-            <a class="icon" href="https://github.com/mre" title="My Github profile" aria-label="My Github profile">
+            <a class="icon" href="https://github.com/sponsors/mre" title="Github Sponsors" aria-label="Github Sponsors">
                 {{ github | safe }}
             </a>
         </li>
