--- a/templates/snippets/newsletter.html
+++ b/templates/snippets/newsletter.html
@@ -24,4 +24,10 @@
       />
     </p>
   </form>
+  <p>
+    I'd love to write more.
+    <a href="https://github.com/sponsors/mre/">
+      Would you like to help me?
+    </a>
+  </p>
 </div>
