--- a/sass/main.scss
+++ b/sass/main.scss
@@ -70,19 +70,6 @@ main {
   max-width: 650px;
 }
 
-figure a {
-  border: none;
-}
-
-figure a:hover {
-  border: none;
-}
-
-nav a,
-nav a:hover {
-  border-bottom: none;
-}
-
 main article {
   margin-bottom: 44px;
 }
@@ -208,13 +195,17 @@ h3 {
 }
 
 a {
-  color:$grey-500;
-  text-decoration: none;
-  border-bottom: 2px solid $pink-400;
+  color: $grey-500;
+  text-decoration: underline;
+  text-decoration-color: $pink-400;
+  // Doesn't work in Chrome yet:
+  text-decoration-thickness: 2px;
+  // Only works on Firefox right now:
+  transition: text-decoration-color 0.5s;
 }
 
 a:hover {
-  border-bottom: 2px solid $grey-500;
+  text-decoration-color: $grey-500;
 }
 
 header nav ul {
@@ -437,11 +428,11 @@ input:focus::placeholder {
 
   a {
     color: white;
-    border-bottom: 2px solid $pink-500;
+    text-decoration-color: $pink-500;
   }
-
+  
   a:hover {
-    border-bottom: 2px solid white;
+    text-decoration-color: white;
   }
 
   .icon {
