--- a/sass/main.scss
+++ b/sass/main.scss
@@ -49,8 +49,7 @@ body {
 .container {
   display: flex;
   flex-direction: column;
-  margin: 0px auto;
-  margin-top: 10px;
+  margin: 10px auto 0px;
 }
 
 header {
