--- a/templates/snippets/nav.html
+++ b/templates/snippets/nav.html
@@ -17,18 +17,18 @@
             </a>
         </li>
         <li>
-            <a class="icon" href="https://twitter.com/matthiasendler" title="My Twitter profile"
-                aria-label="My Twitter profile">
+            <a class="icon" href="https://twitter.com/matthiasendler" title="Twitter"
+                aria-label="Twitter">
                 {{ twitter | safe }}
             </a>
         </li>
         <li>
-            <a class="icon" href="https://feedly.com/i/subscription/feed/https%3A%2F%2Fendler.dev%2Frss.xml" title="My RSS feed"
-                aria-label="My RSS feed">{{ rss | safe }}</a>
+            <a class="icon" href="https://feedly.com/i/subscription/feed/https%3A%2F%2Fendler.dev%2Frss.xml" title="RSS feed"
+                aria-label="RSS feed">{{ rss | safe }}</a>
         </li>
         <li>
             <a class="searchicon icon" href="#searchbox" title="Search"
-                aria-label="Search through articles">
+                aria-label="Search">
                 {{ search | safe }}
             </a>
         </li>
