--- a/templates/index.html
+++ b/templates/index.html
@@ -80,7 +80,7 @@
         {% endif %} {% endblock content %}
       </main>
     </div>
-    {% block teaser %} {% endblock teaser %} {% include "snippets/footer.html"
-    %}
+    {% block teaser %} {% endblock teaser %}
+    {% include "snippets/footer.html" %}
   </body>
 </html>
