--- a/sass/main.scss
+++ b/sass/main.scss
@@ -344,7 +344,7 @@ input:focus::placeholder {
   }
 
   .bio span:after {
-    content: "Writes about Rust, low-level computing, and microwave clocks.";
+    content: "Writes about Rust, engineering culture, and socks.";
   }
 }
 
