--- a/templates/index.html
+++ b/templates/index.html
@@ -48,7 +48,7 @@
         {% include "snippets/logo.html" %}
         <p class="bio">
           <span>
-            Backend engineer, open-source maintainer, speaker.
+            Open-source maintainer, speaker, rebel.
           </span>
           <a href="/about">About me.</a>
         </p>
