--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,12 @@
-{% import "_macros.html" as macros %}
-{% set css = load_data(path="public/main.css") %}
+{% import "_macros.html" as macros %} {% set css =
+load_data(path="public/main.css") %}
 
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <style>{{ css | safe }}</style>
+    <style>
+      {{ css | safe }}
+    </style>
     {%- block header %}
     <title>Matthias Endler</title>
     {%- endblock header %}
@@ -52,8 +54,7 @@
           </span>
           <a href="/about">About me.</a>
         </p>
-        {% include "snippets/nav.html" %}
-        {% include "snippets/search.html" %}
+        {% include "snippets/nav.html" %} {% include "snippets/search.html" %}
       </header>
 
       <main>
@@ -71,14 +72,18 @@
           {% endif %}
           <a href="{{ page.permalink }}">More »</a>
         </article>
-        {% endfor %} {% if paginator.previous %}
-        <a class="button" href="{{  paginator.previous}}">« Next articles</a>
-        {% endif %} {% if paginator.next %}
-        <a class="button" href="{{  paginator.next }}">Previous articles »</a>
-        {% endif %} {% endblock content %}
+        {% endfor %}
+
+        <div style="display: flex; justify-content: space-between;">
+          {% if paginator.previous %}
+          <a class="btn" href="{{  paginator.previous}}">« Next</a>
+          {% endif %} {% if paginator.next %}
+          <a class="btn" href="{{  paginator.next }}">Previous »</a>
+          {% endif %} {% endblock content %}
+        </div>
       </main>
     </div>
-    {% block teaser %} {% endblock teaser %}
-    {% include "snippets/footer.html" %}
+    {% block teaser %} {% endblock teaser %} {% include "snippets/footer.html"
+    %}
   </body>
 </html>
