--- a/templates/snippets/newsletter.html
+++ b/templates/snippets/newsletter.html
@@ -10,6 +10,7 @@
     onsubmit="window.open('https://tinyletter.com/mre', 'popupwindow', 'scrollbars=yes,width=800,height=600'); return true"
   >
     <p>
+      <label for="tlemail">E-mail address for newsletter</label>
       <input
         class="field email"
         type="email"
