--- a/templates/snippets/newsletter.html
+++ b/templates/snippets/newsletter.html
@@ -10,13 +10,13 @@
     onsubmit="window.open('https://tinyletter.com/mre', 'popupwindow', 'scrollbars=yes,width=800,height=600'); return true"
   >
     <p>
-      <label for="tlemail">E-mail address for newsletter</label>
       <input
-        class="field email"
+        class="field"
         type="email"
         name="email"
         id="tlemail"
-        placeholder="E-Mail Address"
+        placeholder="E-Mail address"
+        aria-label="E-mail address"
       />
       <input type="hidden" value="1" name="embed" /><input
         class="field submit"
