--- a/templates/index.html
+++ b/templates/index.html
@@ -34,6 +34,7 @@ load_data(path="public/main.css") %}
       color="#5bbad5"
     />
     <link rel="shortcut icon" href="/favicon.ico?v=m2llJQPQq8" />
+    <link href="/rss.xml" rel="alternate" type="application/rss+xml" />
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#ffffff" />
