defer all the scripts

--- a/templates/shortcodes/video.html
+++ b/templates/shortcodes/video.html
@@ -1,5 +1,5 @@
 <link rel="stylesheet" href="{{ get_url(path="video.css") }}" />
-<script src="/video.js"></script>
+<script defer src="/video.js"></script>
 <div 
   class="light-video-embed" 
   data-id="{{id}}"
