Lazy-load vimeo video javascript code

--- a/templates/shortcodes/video.html
+++ b/templates/shortcodes/video.html
@@ -2,7 +2,7 @@
 <script defer src="/video.js"></script>
 <div 
   class="light-video-embed" 
-  data-id="{{id}}"
+  data-url="{{url}}"
   {% if start %}
     data-start="{{start}}"
   {% endif %}
