Mention codeprints.dev in footer

--- a/templates/snippets/footer.html
+++ b/templates/snippets/footer.html
@@ -4,8 +4,9 @@
             <h2><a href="/about">About me</a></h2>
             <p>
                 I'm a Backend Engineer running <i><a href="https://hello-rust.show/">Hello, Rust!</a></i>, a YouTube
-                channel about the Rust
-                programming language and <a href="https://analysis-tools.dev/">analysis-tools.dev</a>, an open platform for static analysis tools.
+                channel about the Rust programming language,
+                <a href="https://codeprints.dev">codeprints.dev</a>, a shop for printing your GitHub history,
+                and <a href="https://analysis-tools.dev/">analysis-tools.dev</a>, an open platform for static analysis tools.
                 On this blog, you'll mostly find articles about programming in
                 <a href="/2017/yes/">Rust</a> and <a href="/2018/go-io-testing/">Golang</a> or developer tools like <a
                     href="/2017/makefiles/">make</a> and <a href="/2018/ten-years-of-vim/">Vim</a>. 
@@ -19,10 +20,7 @@
                 your help I can spend more time writing and developing. The
                 best way to support me is to <a
                 href="https://github.com/sponsors/mre/">sponsor me on
-                GitHub</a>.  GitHub will even match sponsorships until October
-                2020!  Alternatively, I also have a <a
-                href="https://www.patreon.com/hellorust">Patreon</a> account.
-                Thank you! ❤️
+                GitHub</a> ❤️.
             </p>
         </div>
     </div>
