--- a/templates/snippets/newsletter.html
+++ b/templates/snippets/newsletter.html
@@ -1,50 +1,22 @@
 <div class="info">
-  <p>
-    Thanks for reading! If you would like to receive future posts automatically,
-    you can subscribe via email or <a href="/rss.xml">RSS</a>.
-  </p>
-  <form
-    action="https://tinyletter.com/mre"
-    method="post"
-    target="popupwindow"
-    onsubmit="window.open('https://tinyletter.com/mre', 'popupwindow', 'scrollbars=yes,width=800,height=600'); return true"
-  >
     <p>
-      <input
-        class="field"
-        type="email"
-        name="email"
-        id="tlemail"
-        placeholder="E-Mail address"
-        aria-label="E-mail address"
-      />
-      <input type="hidden" value="1" name="embed" /><input
-        class="field submit"
-        type="submit"
-        value="Subscribe"
-      />
+        Thanks for reading! I write about Rust and my (open-source) projects. If you would like to receive future posts automatically,
+            you can subscribe via email or
+        <a href="/rss.xml">RSS</a>.
     </p>
-  </form>
-  <p>
-    Want to read more stories?
-    <a
-      class="btn btn-sm"
-      aria-label="Sponsor Matthias on Github"
-      href="https://github.com/sponsors/mre/"
-    >
-      <svg
-        class="btn-ico"
-        viewBox="0 0 16 16"
-        version="1.1"
-        width="16"
-        height="16"
-        aria-hidden="true"
-      >
-        <path
-          fill-rule="evenodd"
-          d="M4.25 2.5c-1.336 0-2.75 1.164-2.75 3 0 2.15 1.58 4.144 3.365 5.682A20.565 20.565 0 008 13.393a20.561 20.561 0 003.135-2.211C12.92 9.644 14.5 7.65 14.5 5.5c0-1.836-1.414-3-2.75-3-1.373 0-2.609.986-3.029 2.456a.75.75 0 01-1.442 0C6.859 3.486 5.623 2.5 4.25 2.5zM8 14.25l-.345.666-.002-.001-.006-.003-.018-.01a7.643 7.643 0 01-.31-.17 22.075 22.075 0 01-3.434-2.414C2.045 10.731 0 8.35 0 5.5 0 2.836 2.086 1 4.25 1 5.797 1 7.153 1.802 8 3.02 8.847 1.802 10.203 1 11.75 1 13.914 1 16 2.836 16 5.5c0 2.85-2.045 5.231-3.885 6.818a22.08 22.08 0 01-3.744 2.584l-.018.01-.006.003h-.002L8 14.25zm0 0l.345.666a.752.752 0 01-.69 0L8 14.25z"
-        ></path></svg
-      ><span>Sponsor</span></a
-    >
-  </p>
+    <form action="https://tinyletter.com/mre" method="post" onsubmit="window.open('https://tinyletter.com/mre', 'popupwindow', 'scrollbars=yes,width=800,height=600'); return true" target="popupwindow">
+        <p>
+            <input aria-label="E-mail address" class="field" id="tlemail" name="email" placeholder="E-Mail address" type="email"/>
+            <input name="embed" type="hidden" value="1"/><input class="field submit" type="submit" value="Subscribe"/>
+        </p>
+    </form>
+    <p>
+        Want to read more stories?
+        <a aria-label="Sponsor Matthias on Github" class="btn btn-sm" href="https://github.com/sponsors/mre/">
+            <svg aria-hidden="true" class="btn-ico" height="16" version="1.1" viewbox="0 0 16 16" width="16">
+                <path d="M4.25 2.5c-1.336 0-2.75 1.164-2.75 3 0 2.15 1.58 4.144 3.365 5.682A20.565 20.565 0 008 13.393a20.561 20.561 0 003.135-2.211C12.92 9.644 14.5 7.65 14.5 5.5c0-1.836-1.414-3-2.75-3-1.373 0-2.609.986-3.029 2.456a.75.75 0 01-1.442 0C6.859 3.486 5.623 2.5 4.25 2.5zM8 14.25l-.345.666-.002-.001-.006-.003-.018-.01a7.643 7.643 0 01-.31-.17 22.075 22.075 0 01-3.434-2.414C2.045 10.731 0 8.35 0 5.5 0 2.836 2.086 1 4.25 1 5.797 1 7.153 1.802 8 3.02 8.847 1.802 10.203 1 11.75 1 13.914 1 16 2.836 16 5.5c0 2.85-2.045 5.231-3.885 6.818a22.08 22.08 0 01-3.744 2.584l-.018.01-.006.003h-.002L8 14.25zm0 0l.345.666a.752.752 0 01-.69 0L8 14.25z" fill-rule="evenodd"></path>
+            </svg>
+            <span>Sponsor</span>
+        </a>
+    </p>
 </div>
