Use middot between blog post dates

--- a/templates/page.html
+++ b/templates/page.html
@@ -13,7 +13,7 @@
 <article>
   <p class='post-meta'>Published on {{ macros::nicedate(date=page.date) }}
 {%- if page.updated %}
-. Updated on {{ macros::nicedate(date=page.updated) }}
+&middot; Updated on {{ macros::nicedate(date=page.updated) }}
 {%- endif %}
 
   </p>
