--- a/sass/main.scss
+++ b/sass/main.scss
@@ -537,3 +537,27 @@ input:focus::placeholder {
     background: $blue-800;
   }
 }
+
+h2,
+h3,
+h4 {
+  .anchor {
+    float: left;
+    margin-left: -28px;
+    margin-top: 3px;
+    fill: $grey-400;
+  }
+
+  .anchor:hover {
+    fill: $grey-300;
+  }
+
+  @media (prefers-color-scheme: light) {
+    .anchor {
+      fill: $grey-300;
+    }
+    .anchor:hover {
+      fill: $grey-400;
+    }
+  }
+}
