--- a/templates/index.html
+++ b/templates/index.html
@@ -86,6 +86,9 @@ load_data(path="public/main.css") %}
         <article class="homepage">
           <p class="post-meta">
             {{ macros::nicedate(daynum=page.day, date=page.date) }}
+            {%- if page.updated %}
+              &middot; Updated on {{ macros::nicedate(date=page.updated) }}
+            {%- endif %}
           </p>
           <a href="{{ page.permalink | safe }}">
             <h1>{{ page.title }}</h1>
