--- a/templates/snippets/footer.html
+++ b/templates/snippets/footer.html
@@ -5,12 +5,12 @@
             <p>
                 I'm a Backend Engineer running <i><a href="https://hello-rust.show/">Hello, Rust!</a></i>, a YouTube
                 channel about the Rust programming language,
-                <a href="https://codeprints.dev">codeprints.dev</a>, a shop for printing your GitHub history,
-                and <a href="https://analysis-tools.dev/">analysis-tools.dev</a>, an open platform for static analysis tools.
+                <a href="https://codeprints.dev">codeprints.dev</a>, a shop for printing your GitHub timeline,
+                and <a href="https://analysis-tools.dev/">analysis-tools.dev</a>, an open platform for static code analysis tools.
                 On this blog, you'll mostly find articles about programming in
                 <a href="/2017/yes/">Rust</a> and <a href="/2018/go-io-testing/">Golang</a> or developer tools like <a
                     href="/2017/makefiles/">make</a> and <a href="/2018/ten-years-of-vim/">Vim</a>. 
-                    Don't know where to start? Check out the <a href="/archive">blog archive</a>.
+                    Don't know where to start? Check out the <a href="/archive">blog archive</a> or my <a href="/about">about page</a>.
             </p>
         </div>
         <div>
