--- a/templates/index.html
+++ b/templates/index.html
@@ -82,32 +82,20 @@ load_data(path="public/main.css") %}
       </header>
 
       <main>
-        {% block content %} {% for page in paginator.pages %}
-        <article class="homepage">
-          <p class="post-meta">
-            {{ macros::nicedate(daynum=page.day, date=page.date) }}
-            {%- if page.updated %}
-              &middot; Updated on {{ macros::nicedate(date=page.updated) }}
-            {%- endif %}
-          </p>
-          <a href="{{ page.permalink | safe }}">
-            <h1>{{ page.title }}</h1>
-          </a>
-          {% if page.summary %} {{ page.summary | striptags | safe }} {% elif
-          page.extra.excerpt %} {{ page.extra.excerpt | striptags | safe }} {%
-          else %} {{ page.content | striptags | truncate(length=300) | safe }}
-          {% endif %}
-          <a href="{{ page.permalink }}">More »</a>
-        </article>
-        {% endfor %}
+        {% block content %}
+          {% for page in paginator.pages %}
+            {% include "snippets/article.html" %}
+          {% endfor %}
 
-        <div style="display: flex; justify-content: space-between">
-          {% if paginator.previous %}
-          <a class="btn" href="{{  paginator.previous}}">« Next</a>
-          {% endif %} {% if paginator.next %}
-          <a class="btn" href="{{  paginator.next }}">Previous »</a>
-          {% endif %} {% endblock content %}
-        </div>
+          <div style="display: flex; justify-content: space-between">
+            {% if paginator.previous %}
+              <a class="btn" href="{{  paginator.previous}}">« Next</a>
+            {% endif %}
+            {% if paginator.next %}
+              <a class="btn" href="{{  paginator.next }}">Previous »</a>
+            {% endif %}
+          </div>
+        {% endblock content %}
       </main>
     </div>
     {% block teaser %} {% endblock teaser %} {% include "snippets/footer.html"
