--- a/templates/page.html
+++ b/templates/page.html
@@ -1,48 +1,63 @@
 {% extends "index.html" %}
 
 {%- block header %}
-<title>{{ page.title }} | Matthias Endler</title>
+<title>{{ page.title }}
+    | Matthias Endler</title>
 <link rel="canonical" href="{{ page.permalink | safe }}">
 {%- if page.extra.css %}
-<link rel="stylesheet" href="./article.css" />
+    <link href="./article.css" rel="stylesheet"/>
 {%- endif %}
-{%- include "snippets/social.html" %}
-{%- endblock header -%}
+{%- include "snippets/social.html" %}{%- endblock header -%}
 
 {%- block content %}
-<article>
-  <p class='post-meta'>Published on {{ macros::nicedate(date=page.date) }}
-{%- if page.updated %}
-&middot; Updated on {{ macros::nicedate(date=page.updated) }}
-{%- endif %}
 
+<article>
+  <p class="post-meta">Published on
+      {{ macros::nicedate(date=page.date) }}
+      {%- if page.updated %}
+          &middot; Updated on
+          {{ macros::nicedate(date=page.updated) }}
+      {%- endif %}
   </p>
+
   <h1>{{ page.title }}</h1>
   {%if page.extra.subtitle %}
-  <h3>&mdash; {{ page.extra.subtitle }}</h3>
+    <h3>&mdash; {{ page.extra.subtitle }}</h3>
   {% endif %}
+
+  {% if page.taxonomies.tags %}
+    <div class="tags">
+      <i>Tagged with</i>
+      {% for tag in page.taxonomies.tags %}
+        <a class="tag" href="/tags/{{tag}}">
+          {{tag}}
+        </a>
+      {%endfor%}
+    </div>
+  {% endif %}
+
   {{ page.content | safe }}
 
-  <ul class='post-links'>
-    {% if page.extra.comments %}
-    <li>
-      {{ macros::comments(comments=page.extra.comments) }}
-    </li>
-    {% endif %}
-    {% if page.extra.translations %}
-    <li>
-      {{ macros::translations(translations=page.extra.translations) }}
-    </li>
-    {% endif %}
+  <ul class="post-links">
+      {% if page.extra.comments %}
+          <li>
+              {{ macros::comments(comments=page.extra.comments) }}
+          </li>
+      {% endif %}
+      {% if page.extra.translations %}
+          <li>
+              {{ macros::translations(translations=page.extra.translations) }}
+          </li>
+      {% endif %}
   </ul>
   {% include "snippets/newsletter.html" %}
   {% if page.extra.credits %}
-  {{ macros::credits(credits=page.extra.credits) }}
+      {{ macros::credits(credits=page.extra.credits) }}
   {% endif %}
-
 </article>
+
 {% endblock content %}
 
 {% block teaser %}
-{% include "snippets/teaser.html" %}
+  {% include "snippets/teaser.html" %}
 {% endblock teaser %}
