--- a/templates/snippets/newsletter.html
+++ b/templates/snippets/newsletter.html
@@ -1,6 +1,6 @@
 <div class="info">
     <p>
-        Thanks for reading! I write about Rust and my (open-source) projects. If you would like to receive future posts automatically,
+        Thanks for reading! I mostly write about Rust and my (open-source) projects. If you would like to receive future posts automatically,
             you can subscribe via email or
         <a href="/rss.xml">RSS</a>.
     </p>
