--- a/templates/snippets/footer.html
+++ b/templates/snippets/footer.html
@@ -16,11 +16,16 @@
         <div>
             <h2><a href="https://github.com/sponsors/mre/">Support</a></h2>
             <p>
-                Maintaining this blog and my projects is a lot of work. With
-                your help I can spend more time writing and developing. The
-                best way to support me is to <a
-                href="https://github.com/sponsors/mre/">sponsor me on
-                GitHub</a> ❤️.
+                Some links on this blog are <i>affiliate links</i> and I earn a small
+                comission if you end up buying something on the partner site (at
+                no extra cost for you), which I use to cover maintenance
+                costs. I only link to books and resources that I'd personally recommend to friends.
+            </p>
+            <p>
+                Maintaining this blog and my projects is a lot of work and I'd
+                love to spend a bigger part of my life writing and creating open source projects.
+                If you like to support me in this goal, the best way would be to <a
+                href="https://github.com/sponsors/mre/">become a sponsor</a> ❤️.
             </p>
         </div>
     </div>
