Center picture element contents

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -299,6 +299,11 @@ figcaption {
   text-align: center;
 }
 
+picture {
+  text-align: center;
+  display: block;
+}
+
 .post-links {
   list-style: none;
   padding: 0;
