Add full name to footer

--- a/templates/snippets/footer.html
+++ b/templates/snippets/footer.html
@@ -3,7 +3,7 @@
         <div>
             <h2><a href="/about">About me</a></h2>
             <p>
-                I'm a Backend Engineer running <i><a href="https://hello-rust.show/">Hello, Rust!</a></i>, a YouTube
+                I'm <a href="/about">Matthias Endler</a>, a Backend Engineer running <i><a href="https://hello-rust.show/">Hello, Rust!</a></i>, a YouTube
                 channel about the Rust programming language,
                 <a href="https://codeprints.dev">codeprints.dev</a>, a shop for printing your GitHub timeline,
                 and <a href="https://analysis-tools.dev/">analysis-tools.dev</a>, an open platform for static code analysis tools.
