--- a/sass/main.scss
+++ b/sass/main.scss
@@ -56,10 +56,10 @@ body {
 header {
   font-size: 0.8em;
   text-align: center;
-  padding-top: 30px;
+  padding-top: 25px;
   width: 242px;
   position: sticky;
-  top: 0;
+  top: 50px;
   height: 100vh;
 }
 
