--- a/templates/snippets/newsletter.html
+++ b/templates/snippets/newsletter.html
@@ -1,8 +1,7 @@
 <div class="info">
     <p>
         Thanks for reading! I mostly write about Rust and my (open-source) projects. If you would like to receive future posts automatically,
-            you can subscribe via email or
-        <a href="/rss.xml">RSS</a>.
+            you can subscribe via <a href="/rss.xml">RSS</a> or email:
     </p>
     <form action="https://tinyletter.com/mre" method="post" onsubmit="window.open('https://tinyletter.com/mre', 'popupwindow', 'scrollbars=yes,width=800,height=600'); return true" target="popupwindow">
         <p>
